force-app/main/default/objects/MissingAnimal__c/MissingAnimal__c.object-meta.xml
<CustomObject>
    <description>Object representing report about missing animal.</description>
    <label>MissingAnimal</label>
    <nameField>
        <label>MissingAnimal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MissingAnimals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>