force-app/main/default/objects/MissingAnimal__c/fields/Contact_to_owner__c.field-meta.xml
<CustomField>
    <fullName>Contact_to_owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Contact to person who reports missing animal.</description>
    <inlineHelpText>Contact to person who reports missing animal.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MissingAnimals</relationshipLabel>
    <relationshipName>MissingAnimals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>