force-app/main/default/objects/MissingAnimal__c/fields/Last_Seen_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Seen_Date__c</fullName>
    <label>Last Seen Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>