force-app/main/default/objects/MissingAnimal__c/fields/Last_Seen_Place__c.field-meta.xml
<CustomField>
    <fullName>Last_Seen_Place__c</fullName>
    <label>Last Seen Place</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>