force-app/main/default/objects/MissingAnimal__c/fields/Special_Characteristics__c.field-meta.xml
<CustomField>
    <fullName>Special_Characteristics__c</fullName>
    <label>Special Characteristics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>